2.9.0 - 17/09/2015
Added:
- Quit option in new-config command
Updated:
- Installation bash script
- Messages and references messages
- Image types for graph 
Fixed:
- Some typos

2.8.9 - 15/09/2015
Added:
- Additional option "--case-ins" case insensitive
Fixed:
- Dialog utility crash if exit with Esc key
Update:
- KeyboardInterrupt with signal

2.8.8 - 14/09/2015
Added:
- Additional option "--checklist" in "-n, --network" option
Fixed:
- Typo in help option
Updated:
- Optional dependencies
- "--netwotk" view commands

2.8.7 - 11/09/2015
Fixed:
- Check remove dependencies if already installed

2.8.6 - 11/09/2015
Added:
- Read doinst.sh file in "--network" option
- Editor via configuration file
Updated:
- Rename script view.py in network.py

2.8.5 - 08/09/2015
Fixed:
- Remove packages with option "--checklist" and "--check-deps"

2.8.4 - 08/09/2015
Added:
- Additional option "--checklist" in option "--check" for upgrade packages
Updated:
- Slackware mirrors

2.8.3 - 07/09/2015
Added:
- Update package lists for repository 'slack' after upgrade distribution
- Reset slpkg configuration file in the default values
Fixed:
- pip install

2.8.2 - 04/09/2015
Updated:
- Find SBo created Slackware packages
Fixed:
- Slackpkg update changelog.txt file
- Pylint errors

2.8.1 - 02/09/2015
Fixed:
- Path for build method
- Check if SBo package created
- Autobuild sources order list
Updated:
- Remove check if build
- Reference for repo-enable command

2.8.0 - 01/09/2015
Added:
- NEW configuration file for repositories in /etc/slpkg/repositories.conf
- Enable and disable repositories with command via dialog utility
Update:
- All configuration files
- Command line help logo
- Flags for packages upgrade
- Clear screen after exit dialog utility
Fixed:
- Remove None type packages
- Remove old sbo folder if exists before start build

2.7.6 - 28/08/2015
Fixed:
- Failed checksum message #40
- Removed calculate size
Updated:
- Print list packages from repositories

2.7.5 - 25/08/2015
Added: